index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: 'Tajawal', 'Poppins', sans-serif;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
body::-webkit-scrollbar {
  display: none;
}

/* Base Theme Variables */
html[data-theme="light"] body {
  --c-bg: #fff9f3;
  --c-bg-alt: #f4ece3;
  --c-content: #414b3b;
  --c-action: #d4a373;
  --c-accent: #5a6850;
  --c-glass: #bbbbbc;
  --c-light: #fff;
  --c-dark: #000;
  --glass-reflex-dark: 1;
  --glass-reflex-light: 1;
  --saturation: 150%;
  background: var(--c-bg);
  color: var(--c-content);
  transition: background 400ms cubic-bezier(1, 0.0, 0.4, 1), color 400ms cubic-bezier(1, 0.0, 0.4, 1);
}

html[data-theme="dark"] body {
  --c-bg: #1a1a1a;
  --c-bg-alt: #242424;
  --c-content: #e0e0e0;
  --c-action: #d4a373; /* Using light theme action color for consistency */
  --c-accent: #e4b98c;
  --c-glass: #bbbbbc;
  --c-light: #fff;
  --c-dark: #000;
  --glass-reflex-dark: 1.5;
  --glass-reflex-light: 0.5;
  --saturation: 150%;
  background: var(--c-bg);
  color: var(--c-content);
  transition: background 400ms cubic-bezier(1, 0.0, 0.4, 1), color 400ms cubic-bezier(1, 0.0, 0.4, 1);
}

/* Animations */
@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes pulse-slow {
  50% {
    transform: scale(1.1);
  }
}

.animate-fade {
  animation-duration: 0.8s;
  animation-fill-mode: both;
  animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.animate-fade-in-up {
  animation-name: fadeInUp;
}

.animate-pulse-badge {
  animation: pulse-slow 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}


/* Switcher Styles */
.switcher {
  display: flex;
  align-items: center;
  gap: 8px;
  width: 164px; /* Adjusted for 2 items */
  max-width: 164px;
  height: 50px;
  box-sizing: border-box;
  padding: 6px 10px 6px;
  border: none;
  border-radius: 99em;
  
  /* Fallback */
  background-color: rgba(187, 187, 188, 0.12);
  /* Modern browsers */
  background-color: color-mix(in srgb, var(--c-glass) 12%, transparent);
  
  backdrop-filter: blur(8px) url(#switcher) saturate(var(--saturation));
  -webkit-backdrop-filter: blur(8px) saturate(var(--saturation));

  /* Fallback */
  box-shadow: 
    inset 0 0 0 1px rgba(255, 255, 255, 0.1),
    inset 1.8px 3px 0px -2px rgba(255, 255, 255, 0.9), 
    inset -2px -2px 0px -2px rgba(255, 255, 255, 0.8), 
    inset -3px -8px 1px -6px rgba(255, 255, 255, 0.6), 
    inset -0.3px -1px 4px 0px rgba(0, 0, 0, 0.12), 
    inset -1.5px 2.5px 0px -2px rgba(0, 0, 0, 0.2), 
    inset 0px 3px 4px -2px rgba(0, 0, 0, 0.2), 
    inset 2px -6.5px 1px -4px rgba(0, 0, 0, 0.1), 
    0px 1px 5px 0px rgba(0, 0, 0, 0.1), 
    0px 6px 16px 0px rgba(0, 0, 0, 0.08);
  /* Modern browsers */
  box-shadow: 
    inset 0 0 0 1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 10%), transparent),
    inset 1.8px 3px 0px -2px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 90%), transparent), 
    inset -2px -2px 0px -2px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 80%), transparent), 
    inset -3px -8px 1px -6px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 60%), transparent), 
    inset -0.3px -1px 4px 0px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 12%), transparent), 
    inset -1.5px 2.5px 0px -2px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 20%), transparent), 
    inset 0px 3px 4px -2px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 20%), transparent), 
    inset 2px -6.5px 1px -4px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 10%), transparent), 
    0px 1px 5px 0px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 10%), transparent), 
    0px 6px 16px 0px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 8%), transparent);
  transition: 
    background-color 400ms cubic-bezier(1, 0.0, 0.4, 1),
    box-shadow 400ms cubic-bezier(1, 0.0, 0.4, 1);
}

.switcher__legend {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.switcher__input {
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.switcher__icon {
  display: block;
  width: 100%;
  transition: scale 200ms cubic-bezier(0.5, 0, 0, 1);
}

.switcher__filter {
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.switcher__option {
  --c: var(--c-content);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 16px;
  width: 68px;
  height: 100%;
  box-sizing: border-box;
  border-radius: 99em;
  opacity: 1;
  transition: all 160ms;
}

.switcher__option:hover {
  --c: var(--c-action);
  cursor: pointer;
}

.switcher__option:hover .switcher__icon {
  scale: 1.2;
}

.switcher__option > input:checked + .switcher__icon {
  --c: var(--c-content);
  scale: 1;
}

.switcher__option > input:checked {
  cursor: auto;
}

.switcher::after {
  content: '';
  position: absolute;
  left: 4px;
  top: 4px;
  display: block;
  width: 74px;
  height: calc(100% - 8px);
  border-radius: 99em;
  /* Fallback */
  background-color: rgba(187, 187, 188, 0.36);
  /* Modern browsers */
  background-color: color-mix(in srgb, var(--c-glass) 36%, transparent);
  z-index: -1;
  /* Fallback */
  box-shadow: 
    inset 0 0 0 1px rgba(255, 255, 255, 0.1),
    inset 2px 1px 0px -1px rgba(255, 255, 255, 0.9), 
    inset -1.5px -1px 0px -1px rgba(255, 255, 255, 0.8), 
    inset -2px -6px 1px -5px rgba(255, 255, 255, 0.6), 
    inset -1px 2px 3px -1px rgba(0, 0, 0, 0.2), 
    inset 0px -4px 1px -2px rgba(0, 0, 0, 0.1), 
    0px 3px 6px 0px rgba(0, 0, 0, 0.08);
  /* Modern browsers */
  box-shadow: 
    inset 0 0 0 1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 10%), transparent),
    inset 2px 1px 0px -1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 90%), transparent), 
    inset -1.5px -1px 0px -1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 80%), transparent), 
    inset -2px -6px 1px -5px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 60%), transparent), 
    inset -1px 2px 3px -1px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 20%), transparent), 
    inset 0px -4px 1px -2px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 10%), transparent), 
    0px 3px 6px 0px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 8%), transparent);
}

.switcher[data-theme="light"]::after {
  translate: 0 0;
  transform-origin: right;
  transition: 
    background-color 400ms cubic-bezier(1, 0.0, 0.4, 1),
    box-shadow 400ms cubic-bezier(1, 0.0, 0.4, 1),
    translate 400ms cubic-bezier(1, 0.0, 0.4, 1);
  animation: scaleToggle 440ms ease; 
}

.switcher[data-theme="dark"]::after {
  translate: 76px 0;
  transition: 
    background-color 400ms cubic-bezier(1, 0.0, 0.4, 1),
    box-shadow 400ms cubic-bezier(1, 0.0, 0.4, 1),
    translate 400ms cubic-bezier(1, 0.0, 0.4, 1);
  animation: scaleToggle2 440ms ease; 
}

.switcher[c-previous="light"][data-theme="dark"]::after { transform-origin: left; }

@keyframes scaleToggle { 0% { scale: 1 1; } 50% { scale: 1.1 1; } 100% { scale: 1 1; } }
@keyframes scaleToggle2{ 0% { scale: 1 1; } 50% { scale: 1.2 1; } 100% { scale: 1 1; } } 

/* Glass Bar Styles for BottomNav */
.glass-bar {
  display: flex;
  position: relative;
  align-items: center;
  box-sizing: border-box;
  border: none;
  overflow: hidden; /* This clips the overflowing slider */
  /* Fallback */
  background-color: rgba(187, 187, 188, 0.12);
  /* Modern browsers */
  background-color: color-mix(in srgb, var(--c-glass) 12%, transparent);
  
  backdrop-filter: blur(8px) saturate(var(--saturation));
  -webkit-backdrop-filter: blur(8px) saturate(var(--saturation));
  
  /* Fallback */
  box-shadow: 
    inset 0 0 0 1px rgba(255, 255, 255, 0.1),
    inset 1.8px 3px 0px -2px rgba(255, 255, 255, 0.9), 
    inset -2px -2px 0px -2px rgba(255, 255, 255, 0.8), 
    inset -3px -8px 1px -6px rgba(255, 255, 255, 0.6), 
    inset -0.3px -1px 4px 0px rgba(0, 0, 0, 0.12), 
    inset -1.5px 2.5px 0px -2px rgba(0, 0, 0, 0.2), 
    inset 0px 3px 4px -2px rgba(0, 0, 0, 0.2), 
    inset 2px -6.5px 1px -4px rgba(0, 0, 0, 0.1), 
    0px 1px 5px 0px rgba(0, 0, 0, 0.1), 
    0px 6px 16px 0px rgba(0, 0, 0, 0.08);
  /* Modern browsers */
  box-shadow: 
    inset 0 0 0 1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 10%), transparent),
    inset 1.8px 3px 0px -2px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 90%), transparent), 
    inset -2px -2px 0px -2px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 80%), transparent), 
    inset -3px -8px 1px -6px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 60%), transparent), 
    inset -0.3px -1px 4px 0px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 12%), transparent), 
    inset -1.5px 2.5px 0px -2px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 20%), transparent), 
    inset 0px 3px 4px -2px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 20%), transparent), 
    inset 2px -6.5px 1px -4px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 10%), transparent), 
    0px 1px 5px 0px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 10%), transparent), 
    0px 6px 16px 0px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 8%), transparent);
  
  transition: 
    background-color 400ms cubic-bezier(1, 0.0, 0.4, 1),
    box-shadow 400ms cubic-bezier(1, 0.0, 0.4, 1);
  border-top: 1px solid color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 10%), transparent);
}

.glass-bar-slider {
  content: '';
  position: absolute;
  left: 4px;
  top: 4px;
  display: block;
  height: calc(100% - 8px);
  border-radius: 99em; /* Rounded slider */
  /* Fallback */
  background-color: rgba(187, 187, 188, 0.36);
  /* Modern browsers */
  background-color: color-mix(in srgb, var(--c-glass) 36%, transparent);
  z-index: 0;
  /* Fallback */
  box-shadow: 
    inset 0 0 0 1px rgba(255, 255, 255, 0.1),
    inset 2px 1px 0px -1px rgba(255, 255, 255, 0.9), 
    inset -1.5px -1px 0px -1px rgba(255, 255, 255, 0.8), 
    inset -2px -6px 1px -5px rgba(255, 255, 255, 0.6), 
    inset -1px 2px 3px -1px rgba(0, 0, 0, 0.2), 
    inset 0px -4px 1px -2px rgba(0, 0, 0, 0.1);
  /* Modern browsers */
  box-shadow: 
    inset 0 0 0 1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 10%), transparent),
    inset 2px 1px 0px -1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 90%), transparent), 
    inset -1.5px -1px 0px -1px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 80%), transparent), 
    inset -2px -6px 1px -5px color-mix(in srgb, var(--c-light) calc(var(--glass-reflex-light) * 60%), transparent), 
    inset -1px 2px 3px -1px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 20%), transparent), 
    inset 0px -4px 1px -2px color-mix(in srgb, var(--c-dark) calc(var(--glass-reflex-dark) * 10%), transparent);
  transition: 
    background-color 400ms cubic-bezier(1, 0.0, 0.4, 1),
    box-shadow 400ms cubic-bezier(1, 0.0, 0.4, 1),
    transform 400ms cubic-bezier(0.65, 0, 0.35, 1);
}

